<resources>
    <string name="app_name">English Conversation</string>
    <string name="title_app_name_two_line">English\nConversation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_null"> </string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Sign Up</string>
    <string name="title_register">New here? Sign Up</string>
    <string name="confirrm_password">Confirm password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_login">Already register. Login now!</string>
    <string name="empty_email">Empty email</string>
    <string name="empty_password">Empty password</string>
    <string name="empty_password_confirm">Empty confirm password</string>
    <string name="empty_password_confirm_incorrect">Password confirm is incorrect</string>
    <string name="msg_pls_register">Register account....</string>
    <string name="msg_loading">Loading&#8230;</string>
    <string name="hint_email">Email</string>
    <string name="title_forgot_pasword">Forgot password?</string>
    <string name="forgot_pasword_description">We just need your register Email Id to send your password reset instructions.</string>
    <string name="action_reset_password">Reset password</string>
    <string name="action_back"><![CDATA[<< Back]]></string>
    <string name="msg_reset_password_success">Reset password succesfull, pls check your email to get a new password.</string>
    <string name="action_signout">Sign out</string>
    <string name="action_save">POST</string>
    <string name="title_upload">Select avatar</string>
    <string name="empty_user_name">User name not be empty!</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_edit">Pls enter your name and your photo to finish register account!</string>
    <string name="error_upload_file">Upload image error, pls try again!</string>
    <string name="progress_uploading">Uploading&#8230;</string>
    <string name="title_or">Or</string>
    <string name="facebook_app_id">294623550995501</string>
    <string name="login_facebook_cancel">Login cancel!</string>
    <string name="title_remember_account">Remember me.</string>
    <string name="title_timeline_header">Share your English Video now, %s?</string>
    <string name="timeline_hearder_video">Videos</string>
    <string name="timeline_hearder_photo">Photos</string>
    <string name="timeline_hearder_location">Location</string>
    <string name="action_logout">Logout</string>
    <string name="msg_logout">Do you want logout?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_profile">Profile</string>
    <string name="google_app_key">AIzaSyCcNwaKr23yRRFZS9ZcgoxWKyNTUNqNu6g</string>
    <string name="title_create_post">Post to timeline</string>
    <string name="item_format">+ %s</string>
    <string name="item_create_at">At %s</string>
    <string name="title_upload_percent">%s %</string>
    <string name="msg_upload_error">Upload %s error!</string>
    <string name="title_record">Recording&#8230;</string>
    <string name="aar_save">Save</string>
    <string name="aar_paused">Paused</string>
    <string name="aar_recording">Recording</string>
    <string name="aar_playing">Playing</string>
    <string name="description_image_posted">Posted image</string>
    <string name="description_voted">Voted</string>
    <string name="title_vote">Vote</string>
    <string name="title_comment">Comment</string>
    <string name="title_description">Description:</string>
    <string name="title_image">Image</string>
    <string name="title_audio">Audio</string>
    <string name="title_video">Video</string>
    <string name="hint_description">Put your post here</string>
    <string name="subtitle_create_post">What are you thinking ?</string>
    <string name="title_for_recording_duration">Recording audio</string>
    <string name="description_recording_audio_button">Recording audio button</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_begin_recording_time">00:00</string>
    <string name="description_recording_audio_convention">Recording audio convention</string>
    <string name="description_delete_conversation">Deleting a conversations</string>
    <string name="description_transform_content_conversation">Transform content conversations</string>
    <string name="action_view_all">See more &#8230;</string>
    <string name="description_location">Pick a location</string>
    <string name="description_record_audio">Record an audio</string>
    <string name="description_record_video">Record a video</string>
    <string name="description_pick_images">Pick all images what you want to post</string>
    <string name="description_conversation">Create a conversation</string>
    <string name="error_init_media">Sorry, you can not start recording audio mode. Please try again later!</string>
    <string name="message_record_cancel">You have just cancel the recording audio without saving!</string>
    <string name="message_error_audio_update">Sorry, An error has just occurred. Please try again!</string>
    <string name="message_error_prepare">Sorry, you can not start recording audio mode. Please try again later!</string>
    <string name="prefix_audio_file_name">RecordingAudio_</string>
    <string name="prefix_uploading">Uploading: </string>
    <string name="msg_get_user_info_failed"> .Please try to login again!</string>
    <string name="description_back_to_timeline">Press to back to timeline</string>
    <string name="description_vote_for_post">Vote for this post</string>
    <string name="is_empty">Empty, Please enter the data!</string>
    <string name="invalid_email_format">Invalid email format!</string>
    <string name="least_6_characters">Please enter at least 6 characters!</string>
    <string name="confirm_password_does_not_match">Confirm password does not match!</string>
    <string name="msg_error_init">Sorry, you can not init this audio. Please try again later!</string>
    <string name="msg_error_start">Sorry, an error has occurred. Please try again later!</string>
    <string name="description_play_audio">Play the detail audio</string>
    <string name="description_avatar">Image post user</string>
    <string name="transition_audio">Transition audio</string>
    <string name="description_pause_audio">Pause audio</string>
    <string name="title_audio_separator_time">/</string>
    <string name="title_see_more">See more &#8230;</string>
    <string name="description_dimiss_audio">Dimiss audio</string>
    <string name="description_second_image">Second image</string>
    <string name="description_third_image">Third image</string>
    <string name="description_fourth_image">Fourth image</string>
    <string name="description_first_image">First image</string>
    <string name="description_play_video">Play video</string>
    <string name="description_pause_video">Pause video</string>
    <string name="description_next_audio">Next audio</string>
    <string name="symbol_percent"> %</string>
    <string name="title_post_detail">%1$s Post</string>
    <string name="title_selected_image_deital">Image detail</string>
    <string name="description_write_a_comment">Write a comment &#8230;</string>
    <string name="title_recording_audio">Record audio</string>
    <string name="title_remove_audio">Remove audio</string>
    <string name="title_preview_audio">Preview audio</string>
    <string name="title_delete_item">Delete conversation item</string>
    <string name="hint_create_conversation">Insert message &#8230;</string>
    <string name="title_upload_file">Upload files</string>
    <string name="msg_uploading">Uploading..............</string>
    <string name="title_system">System</string>
    <string name="setting_auto_play">Auto play</string>
    <string name="setting_title">Settings</string>
    <string name="msg_change_setting_enable_success">Setting was changed successfuly, please reopen app to apply change!</string>
    <string name="title_choose_audio_file">Choose audio file</string>
    <string name="title_del_comment">Delete</string>
    <string name="title_edit_comment">Edit</string>
    <string name="action_cancel">Cancel</string>
    <string name="msg_delete_comment">Delete Comment </string>
    <string name="title_confirm_delete_comment">Are you sure to delete this comment ?</string>

    <string name="title_option_post">OptionPost</string>
    <string name="title_delete_post">Delete my post</string>
    <string name="title_edit_post">Edit my post</string>

    <string name="title_confirm_delete_timeline">Are you sure to delete this post ?</string>

    <string name="action_edit">Edit</string>
    <string name="action_change_password">Change Password</string>
    <string name="title_current_password">Current Password</string>
    <string name="title_new_password">New Password</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_ok">OK</string>
    <string name="flag_editor_choise">Editor\'s Choise</string>

    <string name="msg_change_password_success">Change Password Successful!</string>
    <string name="msg_change_password_failed">Change Password Failed!</string>

</resources>
