<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.framgia.englishconversation.screen.forgotPassword.ForgotPasswordViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="@dimen/dp_10"
        tools:context="com.framgia.englishconversation.screen.login.LoginActivity">

        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/title_forgot_pasword"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_25" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/forgot_pasword_description"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dp_10"
                    android:shadowColor="@android:color/white"
                    android:text="@={viewModel.email}"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="@android:color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:color="@color/colorPrimary"
                android:onClick="@{() -> viewModel.onResetPasswodClick()}"
                android:text="@string/action_reset_password"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:onClick="@{() -> viewModel.onBackClick()}"
            android:text="@string/action_back"
            android:textColor="@android:color/white" />

    </LinearLayout>
</layout>
