<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.framgia.englishconversation.screen.changepassword.ChangePasswordViewModel"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:foregroundGravity="center"
        android:paddingBottom="@dimen/dp_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="@dimen/dp_120"
            android:paddingRight="@dimen/dp_120"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:id="@+id/text_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/title_change_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            app:passwordToggleEnabled="true"
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_change_password">

            <android.support.v7.widget.AppCompatEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/title_current_password"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="@dimen/dp_12"
                android:shadowColor="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:passwordToggleEnabled="true"
            android:id="@+id/edit_new_password"
            app:layout_constraintTop_toBottomOf="@id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/title_new_password"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="@dimen/dp_12"
                android:shadowColor="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/edit_new_password"
            android:id="@+id/retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/title_confirm_password"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="@dimen/dp_12"
                android:shadowColor="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text_view_OK"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            app:layout_constraintRight_toRightOf="parent"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp_30"
            app:layout_constraintTop_toBottomOf="@id/retype_password"
            android:text="@string/title_ok"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            app:layout_constraintEnd_toStartOf="@id/text_view_OK"
            android:id="@+id/text_view_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:textAllCaps="true"
            android:text="@string/title_cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/retype_password"
            />

    </android.support.constraint.ConstraintLayout>

</layout>